--- a/src/main/html/css/screen.css
+++ b/src/main/html/css/screen.css
@@ -1155,6 +1155,10 @@
 .swagger-section .auth {
   float: right;
 }
+.swagger-section .basic-auth div {
+  margin-bottom: 10px;
+  display: inline-block;
+}
 .swagger-section .api-ic {
   height: 18px;
   vertical-align: middle;
@@ -1216,14 +1220,14 @@
   cursor: pointer;
 }
 .swagger-section #header {
-  background-color: #89bf04;
+  background-color: #3b8ede;
   padding: 14px;
 }
-.swagger-section #header a#logo {
+.swagger-section #header #logo {
   font-size: 1.5em;
   font-weight: bold;
   text-decoration: none;
-  background: transparent url(../images/logo_small.png) no-repeat left center;
+  background: transparent url(../images/spireon_header_logo.png) no-repeat left center;
   padding: 20px 0 20px 40px;
   color: white;
 }
