--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -12,6 +12,11 @@
     float: right;
 }
 
+.basic-auth div {
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
 .api-ic {
     height: 18px;
     vertical-align: middle;
@@ -80,13 +85,13 @@
 }
 
 #header {
-    background-color: #89bf04;
+    background-color: #3b8ede;
     padding: 14px;
-    a#logo {
+    #logo {
         font-size: 1.5em;
         font-weight: bold;
         text-decoration: none;
-        background: transparent url(../images/logo_small.png) no-repeat left center;
+        background: transparent url(../images/spireon_header_logo.png) no-repeat left center;
         padding: 20px 0 20px 40px;
         color: white;
     }
